editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

.container{
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    .max-content{
        .header{
            align-items: center; 
            .subtitle{
                &::before{
                    display: none;
                }
            }
            .title, .description{
                text-align: center;
            }
        }
    }
    .button-container{
        display: flex;
        flex-wrap: wrap;
        gap: var(--composer-gap-sm);
        justify-content: center;
        .button{
            .button-text{
                content: "";
            }
        }
    }
}

