fix(card): Resolve subtitle alignment shift by removing extra line spacing

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -6,9 +6,16 @@
         .header{
             align-items: center; 
             .subtitle{
+                transform: none !important;
+                height: calc(2.75rem + 2 * var(--composer-gap-xs)) !important; 
+                display: flex;
+                align-items: center;
                 &::before{
-                    display: none;
+                    display: none !important
                 }
+            }
+            .title{
+                color: var(--composer-font-color-primary);
             }
             .title, .description{
                 text-align: center;
